  configuration files based on the names of active profiles.
* `@DirtiesContext` supports new `BEFORE_METHOD`, `BEFORE_CLASS`, and
  `BEFORE_EACH_TEST_METHOD` modes for closing the `ApplicationContext`
  _before_ a test -- for example, if some rogue (i.e., yet to be
  determined) test within a large test suite has corrupted the original
  configuration for the `ApplicationContext`.
* `@Rollback` may now be used to configure class-level _default rollback_ semantics.
** Consequently, `@TransactionConfiguration` is now deprecated and will be removed in a
   subsequent release.
* `@Sql` now supports execution of _inlined SQL statements_ via a new
  `statements` attribute.
* The `ContextCache` that is used for caching ++ApplicationContext++s
  between tests is now a public API with a default implementation that
  can be replaced for custom caching needs.
* `DefaultTestContext`, `DefaultBootstrapContext`, and
  `DefaultCacheAwareContextLoaderDelegate` are now public classes in the
  `support` subpackage, allowing for custom extensions.
* ++TestContextBootstrapper++s are now responsible for building the
  `TestContext`.
* In the Spring MVC Test framework, `MvcResult` details can now be logged
  at `DEBUG` level or written to a custom `OutputStream` or `Writer`. See
  the new `log()`, `print(OutputStream)`, and `print(Writer)` methods in
  `MockMvcResultHandlers` for details.
* The JDBC XML namespace supports a new `database-name` attribute in
  `<jdbc:embedded-database>`, allowing developers to set unique names
  for embedded databases –- for example, via a SpEL expression or a
  property placeholder that is influenced by the current active bean
  definition profiles.
* Embedded databases can now be automatically assigned a unique name,
  allowing common test database configuration to be reused in different
  ++ApplicationContext++s within a test suite. This support can be enabled
  via:
** `EmbeddedDatabaseFactory.setGenerateUniqueDatabaseName()`